--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                     <div class="col d-none d-lg-block"></div>
                     <div class="col">
                         <h5>Acciones</h5>
-                        <p><a class="btn btn-outline-dark" href="#"><i class="fa-solid fa-cloud-arrow-down"></i> Descargar PDF</a></p>
+                        <p><a class="btn btn-outline-dark" href="MRiosBustosCV.pdf"><i class="fa-solid fa-cloud-arrow-down"></i> Descargar PDF</a></p>
                         <p><a class="btn btn-outline-dark" href="#profile"><i class="fa-solid fa-circle-arrow-up"></i> Volver al inicio</a></p>
                     </div>
                 </div>
